add list example scroll test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hint_senha">Digite sua senha</string>
     <string name="descricao_titulo">Espresso Exemplos</string>
     <string name="outra_atividade">Outra atividade foi chamada</string>
+
+    <string name="element_text">Element</string>
+    <string name="item_element_text">This is element #</string>
+    <string name="middle">This is the middle!</string>
 </resources>
