add toast test with roboletric

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="element_text">Element</string>
     <string name="item_element_text">This is element #</string>
     <string name="middle">This is the middle!</string>
+    <string name="message">Show Toast Message</string>
+    <string name="toast_sendo_mostrado">Toast sendo mostrado</string>
 </resources>
